--- a/config/newer_college_lidar.yaml
+++ b/config/newer_college_lidar.yaml
@@ -4,14 +4,14 @@ PROJECT_NAME: "lvi_sam"
 lvi_sam:
 
   # Topics
-  pointCloudTopic: "/points_raw"               # Point cloud data
-  imuTopic: "/imu_raw"                         # IMU data
+  pointCloudTopic: /os_cloud_node/points               # Point cloud data
+  imuTopic: /alphasense_driver_ros/imu    # using alphasense IMU for now
   odomTopic: "odometry/imu"                   # IMU pre-preintegration odometry, same frequency as IMU
   gpsTopic: "odometry/gpsz"                   # GPS odometry topic from navsat, see module_navsat.launch file
   
   # Frames
-  lidarFrame: "base_link"
-  baselinkFrame: "base_link"
+  lidarFrame: os_sensor
+  baselinkFrame: base
   odometryFrame: "odom"
   mapFrame: "map"
 
@@ -26,9 +26,9 @@ lvi_sam:
   savePCDDirectory: "/Downloads/LOAM/"        # in your home folder, starts and ends with "/". Warning: the code deletes "LOAM" folder then recreates it. See "mapOptimization" for implementation
 
   # Sensor Settings
-  sensor: velodyne                            # lidar sensor type, 'velodyne' or 'ouster' or 'livox'
-  N_SCAN: 64                                  # number of lidar channel (i.e., Velodyne/Ouster: 16, 32, 64, 128, Livox Horizon: 6)
-  Horizon_SCAN: 1800                          # lidar horizontal resolution (Velodyne:1800, Ouster:512,1024,2048, Livox Horizon: 4000)
+  sensor: ouster                            # lidar sensor type, 'velodyne' or 'ouster' or 'livox'
+  N_SCAN: 128                                  # number of lidar channel (i.e., Velodyne/Ouster: 16, 32, 64, 128, Livox Horizon: 6)
+  Horizon_SCAN: 1024                          # lidar horizontal resolution (Velodyne:1800, Ouster:512,1024,2048, Livox Horizon: 4000)
   timeField: "time"                           # point timestamp field, Velodyne - "time", Ouster - "t"
   downsampleRate: 2                           # default: 1. Downsample your data if too many points. i.e., 16 = 64 / 4, 16 = 16 / 1
   lidarMinRange: 1.0                          # default: 1.0, minimum lidar range to be used
@@ -43,10 +43,10 @@ lvi_sam:
   
   ###################### extrinsic between IMU and LiDAR  ###########################
   ###################### T_IMU_LiDAR, LiDAR -> IMU       ###########################
-  extrinsicTranslation: [8.10543972e-01, -3.07054372e-01, 8.02723995e-01]
-  extrinsicRotation: [9.99997685e-01, -7.85402788e-04, 2.02440581e-03,
-                      7.55307105e-04,  9.99889850e-01, 1.48245438e-02,
-                     -2.03582620e-03, -1.48229758e-02, 9.99888022e-01]
+  extrinsicTranslation: [-0.037, -0.008, -0.026]
+  extrinsicRotation: [1., 0., 0.,
+                      0.,  -1., 0.,
+                      0., 0., -1]
 
   ########################## IMU property config  ###########################
   ## 对绝大多数IMU来说，下面三个值分别是"+z", "+y", "+x" (for most of IMUs, the following config is "+z", "+y", "+x")
