Add per drive kitti config

--- a/config/kitti/2011_09_30/KITTI_camera.yaml
+++ b/config/kitti/2011_09_30/KITTI_camera.yaml
@@ -6,6 +6,7 @@ project_name: "lvi_sam"
 #common parameters
 imu_topic: "/imu_raw"
 image_topic: "/kitti/camera_gray_left/image_raw"
+right_image_topic: "/kitti/camera_gray_right/image_raw"
 point_cloud_topic: "lvi_sam/lidar/deskew/cloud_deskewed"
 
 # Lidar Params
@@ -16,18 +17,18 @@ align_camera_lidar_estimation: 1 # align camera and lidar estimation for visuali
 #camera calibration 
 model_type: PINHOLE
 camera_name: cam1
-image_width: 1242
-image_height: 375
+image_width: 1226
+image_height: 370
 distortion_parameters:
   k1: 0.0
   k2: 0.0
   p1: 0.0
   p2: 0.0
 projection_parameters:
-  fx: 7.215377e+02
-  fy: 7.215377e+02
-  cx: 6.095593e+02
-  cy: 1.728540e+02
+  fx: 7.070912e+02
+  fy: 7.070912e+02
+  cx: 6.018873e+02
+  cy: 1.831104e+02
 
 #imu parameters       The more accurate parameters you provide, the worse performance
 acc_n: 0.02         # accelerometer measurement noise standard deviation.
@@ -45,16 +46,16 @@ extrinsicRotation: !!opencv-matrix
    rows: 3
    cols: 3
    dt: d
-   data: [0.00831786,  0.0127777,   0.99988376,  
-         -0.99986477, -0.01408374,  0.00849768, 
-          0.01419068, -0.99981911,  0.01265882]   
+   data: [-0.00108863, -0.00851207,  0.9999631,
+         -0.9999764, -0.00677767, -0.0011463,
+          0.00678718, -0.99994073, -0.0085044]   
 
 #Translation from camera frame to imu frame, imu^T_cam
 extrinsicTranslation: !!opencv-matrix
    rows: 3
    cols: 1
    dt: d
-   data: [1.08330198, -0.3098889, 0.72991979]
+   data: [1.14389871, -0.31271847,  0.72654605]
 
 #feature traker paprameters
 max_cnt: 150            # max feature number in feature tracking
